# benchmarkmicroalgae

./: Data_Benchmark.mat  README.md  load_data.m  pyproject.toml  save_result_plot_windows.m  show_results.m  simulate_benchmark_model.p
.devcontainer/: Dockerfile  devcontainer.json
IFAC_WC_player/: Benchmark_main.m  controller_mpc_l4c.m  dynamic_model_l4casadi.pt  mpc_handler.py
IFAC_WC_player/sources/: Data_Benchmark_ext.mat  baseline_controller_DO.p  baseline_controller_HD.p  baseline_controller_Temp_HX.p  baseline_controller_pH.p  showResults.p  simulate_benchmark_model.p
player/: Benchmark_main.m  controller_DO_OnOff.m  controller_HD_fixed.m  controller_Temp_HX_no_control.m  controller_pH_OnOff.m
