[project]
name = "benchmarkmicroalgae"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matlabengine>=25.2.2",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "torch>=2.4.0",
    "torchvision>=0.19.0",
    "l4casadi",
]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu124" }
torchvision = { index = "pytorch-cu124" }

[tool.uv]
no-build-isolation-package = ["l4casadi"]
